--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-spring": "^9.4.5-beta.1",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
