--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.4.5-beta.1",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.6",
